--- a/CompanyAPI/appsettings.json
+++ b/CompanyAPI/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+	"AllowedHosts": "*",
+
+	"DbSettings": {
+		"Company": "Data Source=tappqa;Initial Catalog=Training-TW-Company;Integrated Security=True"
+	}
 }
