Added Basic Authorization

--- a/CompanyAPI/appsettings.json
+++ b/CompanyAPI/appsettings.json
@@ -7,6 +7,6 @@
 	"AllowedHosts": "*",
 
 	"DbSettings": {
-		"Company": "Data Source=tappqa;Initial Catalog=Training-TW-Company;Integrated Security=True"
+		"Connection": "Data Source=tappqa;Initial Catalog=Training-TW-Company;Integrated Security=True"
 	}
 }
