--- a/CompanyAPI/CompanyAPI.csproj
+++ b/CompanyAPI/CompanyAPI.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Chayns.Backend.Api" Version="1.0.11" />
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
