--- a/CompanyAPI/CompanyAPI.csproj
+++ b/CompanyAPI/CompanyAPI.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="TobitWebApiExtensionsCore" Version="2.0.18" />
   </ItemGroup>
 
 </Project>
