--- a/CompanyAPI/appsettings.json
+++ b/CompanyAPI/appsettings.json
@@ -1,12 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
 	"AllowedHosts": "*",
 
 	"DbSettings": {
 		"Connection": "Data Source=tappqa;Initial Catalog=Training-TW-Company;Integrated Security=True"
+	},
+	"Logger": {
+		"Version": "DEBUG",
+		"ApplicationName": "my_awesome_application",
+		"Team": "junior_team",
+		"Dev": true
 	}
+
 }
